# Advanced-Programming---Project---Texi-Center

./: CMakeLists.txt  README.md  details.txt  log.txt  makefile
src/: CMakeLists.txt  Clock.cpp  Clock.h  Driver.cpp  Driver.h  DriverCreator.h  GridAndObstecalesArgs.cpp  GridAndObstecalesArgs.h  InputParser.h  LuxuryCab.h  Matrix.cpp  Menu.cpp  Menu.h  MenuServer.cpp  MenuServer.h  Passenger.cpp  Passenger.h  Person.h  Point.h  Ride.cpp  Ride.h  Serialization.cpp  Serialization.h  StandardCab.cpp  StandardCab.h  TaxiCab.h  TaxiCenter.cpp  TaxiCenter.h  ThreadPool.cpp  ThreadPool.h  Trip.cpp  Trip.h  TripCreator.cpp  TripCreator.h  Vehicle.h  client.cpp  main.cpp  mainTest.cpp  server.cpp
src/cabs/: LuxuryCab.cpp  LuxuryCab.h  StandardCab.cpp  StandardCab.h  TaxiCab.cpp  TaxiCab.h  Vehicle.h
src/core/: Matrix.cpp  Matrix.h  NodeMatrix.cpp  NodeMatrix.h  Point.cpp
src/core_classes/: Point.h
src/creators/: DriverCreator.cpp  DriverCreator.h  TaxiCreator.cpp  TaxiCreator.h  ThreadCreator.cpp  ThreadCreator.h  TripCreator.cpp  TripCreator.h
src/persons/: Driver.cpp  Driver.h  Passenger.h  Person.cpp  Person.h
src/sockets/: Socket.cpp  Socket.h  Tcp.cpp  Tcp.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  Udp.cpp  Udp.h
tests/: BFSTest.cpp  CMakeLists.txt  DriverTest.cpp  GridTest.cpp  MatrixTest.cpp  NodeMatrixTest.cpp  NodeTest.cpp  PassengerTest.cpp  PointTest.cpp  TaxiCabTest.cpp  TaxiCenterTest.cpp  TripTest.cpp
